--- a/text/data_appendix.tex
+++ b/text/data_appendix.tex
@@ -11,7 +11,7 @@
 % =============================================================================
 \subsection{Sample selection}
 \label{sub:sample_selection}
-
+description
 Table~\ref{tab:selection} documents the selection criteria we applied for this purpose and the reduction in our sample after each step.
 
 \begin{table}[h]
