Add sumstats figs.

--- a/output/tables/sample_selection_XX7.tex
+++ b/output/tables/sample_selection_XX7.tex
@@ -1,14 +1,16 @@
-\begin{tabular}{lr}
+\begin{tabular}{lrrrr}
 \toprule
-                                   Data processing steps &  Number of unique users \\
+                                                        &   Users & Accounts & Transactions & Value (\pounds M) \\
 \midrule
-                                Users in original sample &                   26982 \\
-                   \quad and with non-noisy transactions &                   26982 \\
-              \quad and observed for at least six months &                   23364 \\
-                       \quad and added a current account &                   22077 \\
-          \quad and spend at least \pounds200 each month &                   14331 \\
-          \quad and at least five transactions per month &                   12091 \\
- \quad and spending on more than one category each month &                   12023 \\
-                                   Users in final sample &                   12023 \\
+                                             Raw sample &  27,111 &  130,325 &   55,125,624 &           1,187.8 \\
+                             At least 6 months of data. &  23,478 &  122,312 &   54,541,339 &           1,176.2 \\
+                          At least one current account. &  22,184 &  118,794 &   52,854,156 &           1,158.0 \\
+ At least 5 transactions and spend of GBP200 per month. &  14,750 &   77,796 &   38,758,413 &             866.4 \\
+         Income payments in 2/3 of all observed months. &   8,817 &   53,228 &   25,420,978 &             561.8 \\
+                    Yearly incomes between 5k and 100k. &   5,202 &   28,786 &   13,475,729 &             216.7 \\
+           No more than 10 active accounts in any year. &   4,936 &   23,129 &   11,922,181 &             179.1 \\
+              Debits of no more than 100k in any month. &   4,665 &   21,129 &   10,940,880 &             101.3 \\
+                                           Working-age. &   3,724 &   16,608 &    9,388,334 &              83.8 \\
+                                           Final sample &   3,724 &   16,608 &    9,388,334 &              83.8 \\
 \bottomrule
 \end{tabular}
