--- a/code/notebooks/post_salary_spending.ipynb
+++ b/code/notebooks/post_salary_spending.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "Notebook purpose:\n",
     "\n",
-    "- Develop a mechanism to calculate the fraction of discretionary spend during the first n days after payday\n",
+    "- Calculate the fraction of discretionary spend during the first n days after payday\n",
     "\n",
     "Approach:\n",
     "\n",
@@ -394,150 +394,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>transaction_id</th>\n",
-       "      <th>account_id</th>\n",
-       "      <th>account_type</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>transaction_date</th>\n",
-       "      <th>amount</th>\n",
-       "      <th>transaction_description</th>\n",
-       "      <th>merchant_name</th>\n",
-       "      <th>auto_tag</th>\n",
-       "      <th>tag</th>\n",
-       "      <th>manual_tag</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>latest_balance</th>\n",
-       "      <th>up_tag</th>\n",
-       "      <th>salary_range</th>\n",
-       "      <th>year_of_birth</th>\n",
-       "      <th>merchant_business_line</th>\n",
-       "      <th>account_last_refreshed</th>\n",
-       "      <th>user_registration_date</th>\n",
-       "      <th>account_created</th>\n",
-       "      <th>postcode</th>\n",
-       "      <th>credit_debit</th>\n",
-       "      <th>bank</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>699</th>\n",
-       "      <td>53564353</td>\n",
-       "      <td>349605</td>\n",
-       "      <td>current</td>\n",
-       "      <td>253077</td>\n",
-       "      <td>2014-12-05</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>&lt;mdbremoved&gt; bac</td>\n",
-       "      <td>no merchant</td>\n",
-       "      <td>no tag</td>\n",
-       "      <td>earnings_income</td>\n",
-       "      <td>salary - secondary</td>\n",
-       "      <td>f</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>salary - secondary</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1986.0</td>\n",
-       "      <td>no merchant business line</td>\n",
-       "      <td>2017-03-17 00:05:00</td>\n",
-       "      <td>2015-01-16</td>\n",
-       "      <td>2015-01-16</td>\n",
-       "      <td>hu2 8</td>\n",
-       "      <td>credit</td>\n",
-       "      <td>natwest bank</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>700</th>\n",
-       "      <td>53564352</td>\n",
-       "      <td>349605</td>\n",
-       "      <td>current</td>\n",
-       "      <td>253077</td>\n",
-       "      <td>2014-12-05</td>\n",
-       "      <td>287.0</td>\n",
-       "      <td>&lt;mdbremoved&gt;</td>\n",
-       "      <td>no merchant</td>\n",
-       "      <td>salary or wages - main</td>\n",
-       "      <td>earnings_income</td>\n",
-       "      <td>salary or wages - main</td>\n",
-       "      <td>f</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>salary or wages - main</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1986.0</td>\n",
-       "      <td>no merchant business line</td>\n",
-       "      <td>2017-03-17 00:05:00</td>\n",
-       "      <td>2015-01-16</td>\n",
-       "      <td>2015-01-16</td>\n",
-       "      <td>hu2 8</td>\n",
-       "      <td>credit</td>\n",
-       "      <td>natwest bank</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     transaction_id  account_id account_type  user_id transaction_date  \\\n",
-       "699        53564353      349605      current   253077       2014-12-05   \n",
-       "700        53564352      349605      current   253077       2014-12-05   \n",
-       "\n",
-       "     amount transaction_description merchant_name                auto_tag  \\\n",
-       "699    36.0        <mdbremoved> bac   no merchant                  no tag   \n",
-       "700   287.0            <mdbremoved>   no merchant  salary or wages - main   \n",
-       "\n",
-       "                 tag              manual_tag gender  latest_balance  \\\n",
-       "699  earnings_income      salary - secondary      f             0.0   \n",
-       "700  earnings_income  salary or wages - main      f             0.0   \n",
-       "\n",
-       "                     up_tag salary_range  year_of_birth  \\\n",
-       "699      salary - secondary          NaN         1986.0   \n",
-       "700  salary or wages - main          NaN         1986.0   \n",
-       "\n",
-       "        merchant_business_line account_last_refreshed user_registration_date  \\\n",
-       "699  no merchant business line    2017-03-17 00:05:00             2015-01-16   \n",
-       "700  no merchant business line    2017-03-17 00:05:00             2015-01-16   \n",
-       "\n",
-       "    account_created postcode credit_debit          bank  \n",
-       "699      2015-01-16    hu2 8       credit  natwest bank  \n",
-       "700      2015-01-16    hu2 8       credit  natwest bank  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rand = zero[zero.transaction_date.eq(rnd_date)]\n",
-    "helpers.reorder(rand, ['transaction_id', 'account_id', 'account_type'])[:4]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -733,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +604,7 @@
     "                  .dropna())\n",
     "    \n",
     "    def helper(g):\n",
-    "        return all((g > 25) & (g < 35))\n",
+    "        return all((diff > 25) & (diff < 35))\n",
     "    \n",
     "    users = payday_diff.groupby('user_id').filter(helper).index.unique()    \n",
     "    return df[df.user_id.isin(users)]\n",
